--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.4.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "pg": "^8.11.1"
+    "jsonwebtoken": "^9.0.1",
+    "method-override": "^3.0.0",
+    "pg": "^8.11.2",
+    "sequelize": "^6.32.1"
   }
 }
